# sleuth-pr

./: .flake8  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  base.Dockerfile  manage.py  mkdocs.yml  pytest.ini  requirements.txt  setup.cfg
.github/worfklows/: build.yml
.github/workflows/: automations.yml  base-image.yml  main.yml  pythonpublish.yml  release.yml  sleuthpr-test.yml
.sleuth/: rules.yml
app/: asgi.py  celery.py  logging.py  settings.py  urls.py  wsgi.py
app/settings/: base.py  dev.py  github_action.py  test.py
config/dev/: env.template
docs/: __init__.py
docs/src/: _implied_triggers.md  about.md  actions.md  conditions.md  index.md  triggers.md  variables.md
github/: models.py  test.yml  urls.py  views.py
github/migrations/: 0001_initial.py  0002_repository.py
sleuthpr/: apps.py  asgi.py  lock.py  models.py  registry.py  settings.py  sleuthpr.py  test.yml  triggers.py  urls.py  util.py  variables.py  views.py  wsgi.py
sleuthpr/actions/: __init__.py  add_label.py  merge.py  update.py
sleuthpr/management/commands/: on_github_action.py
sleuthpr/migrations/: 0001_initial.py  0002_auto_20200924_2129.py  0002_auto_20200930_1926.py  0002_conditioncheckrun_pull_request.py  0003_auto_20200926_0627.py  0003_auto_20200930_2010.py  0004_pullrequestcheck.py  0004_repositorybranch.py  0005_auto_20200926_0732.py  0005_pullrequest_base_sha.py  0006_repositorycommit_repositorycommitparent.py  0007_auto_20201001_1832.py  0008_auto_20201001_2012.py  0009_auto_20201007_2015.py  0010_delete_conditioncheckrun.py  0011_trigger_description.py  0012_pullrequest_conflict.py  0013_auto_20201009_1607.py  0014_auto_20201009_2319.py  0015_actionresult.py  0016_auto_20201010_0654.py  0017_auto_20201026_2137.py
sleuthpr/services/: branches.py  checks.py  expression.py  external_users.py  github.py  installations.py  operators.py  pull_requests.py  repositories.py  rules.py  scm.py
sleuthpr/services/github/: __init__.py  events.py  scm.py  tasks.py  view.py
sleuthpr/tests/: examples.yml  factories.py  pr.json  test_expression.py  test_github.py  test_pull_requests.py  test_rules.py  test_variables.py
