[metadata]
name = sleuth-pr
description = Pull request automation Django app
author = Don Brown
author_email = don@sleuth.io
maintainer = Don Brown
maintainer_email = don@sleuth.io
long_description = file: README.md
long_description_content_type = text/markdown
license = APLv2 License
url = https://github.com/sleuth-io/sleuth-pr
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development
    Programming Language :: Python :: 3.8
keywords =
    pull request
    automation
    bot

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    Django >= 3.0.0
    celery >= 5.0.0
    marshmallow >= 3.8.0
    PyGithub >= 1.53
    PyJWT >= 1.7.1
    requests >= 2.24.0
    strictyaml >= 1.0.0
    pyparsing >= 2.4.7
    cryptography >= 3.1
    basictracer >= 3.1.0
    opentracing_instrumentation >= 3.2.1
    django_opentracing >= 1.1.0
    redlock >= 1.2.0
setup_requires =
    setuptools_scm

[options.extras_require]
dev =
    pytest
    pytest-django
    flake8
    pylint
    black
    reorder-python-imports
    factory-boy
    mkdocs>=1.1
    mkdocs-macros-plugin
test =
    pytest
doc =
    sphinx
    sphinx_rtd_theme
prod =
    google-re2 == 0.0.7
